// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`LeftStickySection should render its default content 1`] = `
<div
  style={
    Object {
      "display": "flex",
      "flex": "0 0 auto",
      "left": "0",
      "position": "sticky",
    }
  }
/>
`;

exports[`LeftStickySection should render the given columns 1`] = `
<div
  style={
    Object {
      "display": "flex",
      "flex": "0 0 auto",
      "left": "0",
      "position": "sticky",
    }
  }
>
  <React.Fragment
    key="leftSection-0"
  >
    <ScrollSyncColumn
      className=""
      dataKey="a"
      key="a"
      width="150px"
    >
      Column A
    </ScrollSyncColumn>
  </React.Fragment>
  <React.Fragment
    key="leftSection-1"
  >
    <ScrollSyncColumn
      className=""
      dataKey="b"
      key="b"
      width="150px"
    >
      Column B
    </ScrollSyncColumn>
  </React.Fragment>
</div>
`;
